# Actix-Mpp

./: .gitignore  Cargo.toml  Conf.json  README.md  release.sh  tsconfig.json
src/: config.rs  main.rs
static/css/: base.css  word-search.css
static/ts/: question.ts  word-search.ts
templates/: base.hbs  index.hbs
