[package]
name = "actixmpp"
version = "0.1.0"
authors = ["PizzasBear <mx.sht06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1"
handlebars = { version = "3.0", features = ["dir_source"] }
ron = "0.5"
serde = "1.0"
tokio-postgres = { version = "0.5" }
# tokio = { version = "0.2", features = ["full"] }
